# callbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo_server.py  deploy.sh  docker-compose.yml  e2e-review.txt  pyproject.toml  test_scenarios.md
.claude/: feature-spec-state.local.md
.github/: PULL_REQUEST_TEMPLATE.md
business/: api_wrapper.py  enums.py
docs/: TEST_SCENARIOS.md  architecture.md  code-review-report.md  code-review-round-1.md  decisions-log.md  feature-spec-auto-barge-in.md  feature-spec-call-log.md  feature-spec-cd-automation.md  feature-spec-ecs-deploy.md  feature-spec-llm-nlu.md  feature-spec-phase-d-monitoring.md  feature-spec-phase-e-nlu.md  feature-spec-phase-f-voice.md  feature-spec-phase-g-voice-pipeline.md  feature-spec-phase-h-realtime-streaming.md  feature-spec-production.md  feature-spec-server-glue.md  feature-spec-test-gap-prevention.md  feature-spec-vad.md  feature-spec-voice-prompt-optimization.md  impl-plan-auto-barge-in.md  impl-plan-call-log.md  impl-plan-ecs-deploy.md  impl-plan-llm-nlu.md  impl-plan-phase-c.md  impl-plan-phase-d-monitoring.md  impl-plan-phase-e-nlu.md  impl-plan-phase-f-voice.md  impl-plan-phase-g-voice-pipeline.md  impl-plan-phase-h-realtime-streaming.md  impl-plan-server-glue.md  impl-plan-test-gap-prevention.md  impl-plan-vad.md  impl-plan-voice-prompt-optimization.md  impl-review-round-1-vad.md  impl-review-round-1.md  impl-review-round-2.md  report-review-round-1.md  report-review-round-2.md  report-review-round-3.md  (+3 more)
health/: router.py
infra/: .terraform.lock.hcl  callbot-key.pem  (+4 more)
(+140 files in other folders)
